# password-generator

./: LICENSE  README.md  README.ru.md  passwords.txt  pyproject.toml  requirements.txt  run.py  secrets.txt
.config/pwgen/: config.example.json  config.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_en.md  config.yml
.github/workflows/: ci.yml  release.yml
src/: i18n.py  version.py
src/core/: cli.py  config.py  load_config.py  main.py
src/core/utils/: validate_config.py
src/modules/generator/: __init__.py  charset.py  engine.py  passphrase.py  wordlist.py
src/modules/output/: __init__.py  writer.py
tests/: __init__.py  test_charset.py  test_cli.py  test_config.py  test_engine.py  test_i18n.py  test_passphrase.py  test_writer.py
