[project]
name = "password-generator"
version = "0.1.0"
description = "CLI password generation utility"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

[project.scripts]
pwgen = "src.core.main:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
