[project]
name = "password-generator"
version = "1.0.0"
description = "CLI password generation utility"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

[project.scripts]
pwgen = "src.core.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
clipboard = ["pyperclip>=1.8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
